--- a/resources/css/ext.spamRegex.css
+++ b/resources/css/ext.spamRegex.css
@@ -1,4 +1,4 @@
-input[name="wpBlockedPhrase"],
-input[name="wpBlockedReason"] {
+input [ name='wpBlockedPhrase' ],
+input [ name='wpBlockedReason' ] {
 	width: 100%;
 }
